--- a/style.css
+++ b/style.css
@@ -1,4 +1,149 @@
-body{
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+    overflow: hidden;
+    font-size: 8px;
+    font-family: "Roboto Cn", sans-serif;
+}
+
+body {
+    color: black;
+    margin: 0;
+    padding: 0;
+    perspective: 1px;
+    transform-style: preserve-3d;
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    font-family: "Luna";
+}
+
+a {
+    text-decoration: none;
+    color: rgb(255, 102, 0);
+}
+
+
+/*header {
+    width: 100%;
+    height: 100vh;
+    background: url("header.jpeg") no-repeat;
+    background-size: cover;
+}*/
+
+.container {
+    background: white;
+    width: 100%;
+    height: 50px;
+    padding-bottom: 1.5rem;
+    margin: 0 auto;
+}
+
+.base {
+    height: 300px;
+    width: 100%;
+    background-color: aliceblue;
+}
+
+.slide {
+    height: 300px;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    text-align: center;
+}
+
+.img-container {
+    width: 2400px;
+    height: 300px;
+    position: relative;
+    transition: left 2s;
+    -webkit-transition: left 2s;
+}
+
+.slider-img {
+    float: left;
+    margin: 0px;
+    padding: 0px;
+}
+
+.button-container {
+    top: -20px;
+    position: relative;
+}
+
+.slider-button {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background-color: white;
+}
+
+#image1:target~.img-container {
+    left: 0px;
+}
+
+#image2:target~.img-container {
+    left: -800px;
+}
+
+#image3:target~.img-container {
+    left: -1600px;
+}
+
+
+/*#par {
+    color: black;
+    font-size: 100px;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90vh;
+}*/
+
+nav {
+    padding-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.6rem;
+}
+
+.brand {
+    margin-left: 10rem;
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    margin-right: 10rem;
+}
+
+nav ul li {
+    padding: 1.5rem;
+    position: relative;
+    letter-spacing: 2px;
+    color: gray;
+}
+
+ul li:hover {
+    border-style: solid;
+    border-width: 0px 0px 2px 0px;
+    border-color: palegreen;
+    color: palegreen;
+}
+
+
+/*body{
     background: url("header.jpeg") no-repeat;
     background-size: cover;
     font-size-adjust: inherit;
@@ -22,4 +167,4 @@ ul li{
 
 ul li:hover{
     background: gray;
-}
+}*/
