--- a/style.css
+++ b/style.css
@@ -23,14 +23,6 @@ body {
     font-family: "Luna";
 }
 
-
-/*header {
-    width: 100%;
-    height: 100vh;
-    background: url("header.jpeg") no-repeat;
-    background-size: cover;
-}*/
-
 .main-container {
     background: white;
     width: 100%;
@@ -92,16 +84,6 @@ body {
 #image3:target~.img-container {
     left: -1600px;
 }
-
-
-/*#par {
-    color: black;
-    font-size: 100px;
-    font-weight: bold;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 90vh;
-}*/
 
 nav {
     padding-top: 1rem;
@@ -188,15 +170,6 @@ ul li:hover {
     margin-bottom: 15px;
 }
 
-
-.all-para{
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    vertical-align: middle;
-}
-
 .sqr-heading{
     height: 8vh;
     width: 100%;
@@ -253,18 +226,99 @@ ul li:hover {
     margin-bottom: 20px;
 }
 
+.what-heading{
+    height: 16vh;
+    width: 100%;
+    margin-top: 3vh;
+    background-color: rgba(230, 225, 220, 0.493);
+}
+
+.hed-content{
+    height: 16vh;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    border-width: 0px 0px 1px 0px;
+    border-style: solid;
+    text-align: center;
+    vertical-align: middle;
+    border-color: rgba(128, 128, 128, 0.486);
+    
+}
+
+#hed{
+    padding-top: 3vh;
+    font-size: 48px;
+    font-weight: bold;
+    color: rgb(255, 102, 0);
+
+}
+
+#hed-p{
+    margin-top: 1vh;
+    font-size: 24px;
+    font-weight: bold;
+    color: gray;
+}
 
 
 
 .what-do-wedo{
-    height: 55vh;
+    height: 42vh;
     width: 100%;
-    margin-top: 3vh;
-    background-color: rgba(230, 230, 230, 0.898);
+    background-color: rgba(230, 225, 220, 0.493);
+    font-size: 16px;
+}
+
+.what-content{
+    height: 42vh;
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hor-sec{
+    height: 21vh;
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.ver-sec{
+    height: 18vh;
+    width: 35vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.phone-ic{
+    height: 16vh;
+    width: 10vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.ver-con{
+    height: 16vh;
+    width: 23vw;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
 }
 
 .more{
-    height: 45vh;
+    height: 40vh;
     width: 100%;
     background-color: white;
 }
@@ -273,6 +327,37 @@ ul li:hover {
     height: 9vh;
     width: 100%;
     background-color: rgb(130, 210, 210);
+}
+
+.mda-content{
+    height: 9vh;
+    width: 80vw;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+}
+
+.fst{
+    height: 9vh;
+    width: 57vw;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    font-size: 16px;
+}
+
+.lstt{
+    height: 9vh;
+    width:12vw;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .contact{
@@ -296,30 +381,3 @@ ul li:hover {
     padding-right: 600px;
 }
 
-
-
-/*body{
-    background: url("header.jpeg") no-repeat;
-    background-size: cover;
-    font-size-adjust: inherit;
-}
-
-ul{
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-}
-
-ul li{
-    float: left;
-    width: 300px;
-    height: 40px;
-    opacity: .8;
-    background: bisque;
-    text-align: center;
-    font-size: 20px
-}
-
-ul li:hover{
-    background: gray;
-}*/
