--- a/style.css
+++ b/style.css
@@ -130,12 +130,12 @@ ul li:hover {
 }
 
 .round-options{
-    height: 40vh;
+    overflow: hidden;
     width: 100%;
 }
 
 .boxes{
-    height: 40vh;
+    overflow: hidden;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -152,7 +152,7 @@ ul li:hover {
 }
 
 .rnd-1{
-    height: 30vh;
+    overflow: hidden;
     width: 20vw;
     text-align: center;
     padding: .9vw;
@@ -204,13 +204,13 @@ ul li:hover {
 }
 
 .square-options{
-    height: 40vh;
+    overflow: hidden;
     width: 100%;
     background-color: white;
 }
 
 .sqr{
-    height: 40vh;
+    overflow: hidden;
     width: 25vw;
     margin-left: 1.7vw;
 }
@@ -227,14 +227,14 @@ ul li:hover {
 }
 
 .what-heading{
-    height: 16vh;
+    overflow: hidden;
     width: 100%;
     margin-top: 3vh;
     background-color: rgba(230, 225, 220, 0.493);
 }
 
 .hed-content{
-    height: 16vh;
+    overflow: hidden;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -256,6 +256,7 @@ ul li:hover {
 
 #hed-p{
     margin-top: 1vh;
+    margin-bottom: 3vh;
     font-size: 24px;
     font-weight: bold;
     color: gray;
@@ -264,14 +265,14 @@ ul li:hover {
 
 
 .what-do-wedo{
-    height: 42vh;
+    overflow: hidden;
     width: 100%;
     background-color: rgba(230, 225, 220, 0.493);
     font-size: 16px;
 }
 
 .what-content{
-    height: 42vh;
+    overflow: hidden;
     width: 80vw;
     margin-left: auto;
     margin-right: auto;
@@ -282,7 +283,7 @@ ul li:hover {
 }
 
 .hor-sec{
-    height: 21vh;
+    overflow: hidden;
     width: 80vw;
     margin-left: auto;
     margin-right: auto;
@@ -292,8 +293,10 @@ ul li:hover {
 }
 
 .ver-sec{
-    height: 18vh;
+    overflow: hidden;
     width: 35vw;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -302,7 +305,7 @@ ul li:hover {
 }
 
 .phone-ic{
-    height: 16vh;
+    overflow: hidden;
     width: 10vw;
     display: flex;
     justify-content: space-around;
@@ -310,7 +313,7 @@ ul li:hover {
 }
 
 .ver-con{
-    height: 16vh;
+    overflow: hidden;
     width: 23vw;
     display: flex;
     justify-content: space-around;
@@ -318,9 +321,80 @@ ul li:hover {
 }
 
 .more{
-    height: 40vh;
+    overflow: hidden;
     width: 100%;
     background-color: white;
+    color: gray;
+}
+
+.more1{
+    overflow: hidden;
+    width: 38vw;
+    display: flex;
+    font-size: 16px;
+    justify-content: space-around;
+}
+
+.sqr-img1{
+    height: 25vh;
+    width: 18vw;
+    border-radius: 2%;
+    margin: 20px;
+    margin-bottom: 8vh;
+}
+
+.date-time{
+    overflow: hidden;
+    width: 100%;
+    margin-bottom: 12px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    
+}
+
+.dte{
+    overflow: hidden;
+    padding-left: 1.2vw;
+    padding-right: 1vw;
+    padding-top: .3vh;
+    padding-bottom: .3vh;
+    background-color: rgb(255, 102, 0);
+    color: whitesmoke;
+}
+
+.tme{
+    overflow: hidden;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top: .3vh;
+    padding-bottom: .3vh;
+    background-color: whitesmoke;
+}
+
+.btn{
+    overflow: hidden;
+    padding-left: 1.2vw;
+    padding-right: 1vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    background-color: rgb(255, 102, 0);
+    color: whitesmoke;
+    border-radius: 5%;
+}
+
+.rst{
+    overflow: hidden;
+    margin-left: 1vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.prr{
+    overflow: hidden;
+    margin-top: 1vh;
 }
 
 .social-media{
@@ -361,10 +435,63 @@ ul li:hover {
 }
 
 .contact{
-    height: 39vh;
+    overflow: hidden;
+    padding-top: 4vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.753);
 }
+
+.contact-content{
+    overflow: hidden;
+    width: 78vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: initial;
+    color: antiquewhite;
+    font-size: 16px;
+    line-height: 150%;
+}
+
+.con-par{
+    overflow: hidden;
+    margin-bottom: 3vh;
+    width: 24vw;
+    display: flex;
+    flex-direction: column;
+}
+
+
+input[type=text], select {
+    width: 80%;
+    padding: 12px 20px;
+    margin-right: 5vw;
+    margin-bottom: 1vh;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: rgba(50, 50, 50, 1);
+  }
+
+
+  input[type=submit] {
+    width: 30%;
+    background-color: rgb(130, 210, 210);
+    color: white;
+    padding: 14px 20px;
+    margin-top: 1vh;
+    margin-left: auto;
+    margin-right: 10.5vw;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: rgb(130, 210, 197);
+  }
 
 .end{
     height: 7vh;
