--- a/style.css
+++ b/style.css
@@ -23,15 +23,48 @@ body {
     font-family: "Luna";
 }
 
-.main-container {
-    background: white;
-    width: 100%;
-    height: 50px;
-    padding-bottom: 1.5rem;
-    margin: 0 auto;
+
+.main-container{
+    padding: 0 6vw;
+    background-color: rgb(250,250,250);
+}
+
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#mainn {
+    text-decoration: none;
+    color: rgb(255, 102, 0);
+    font-size: 2vw;
+    font-weight: bold;
+}
+
+nav ul {
+    
+    list-style: none;
+    display: flex;
+}
+
+nav ul li {
+    color: gray;
+    padding: 2vh 1vw;
+    font-size: 1vw;
+}
+
+nav ul li:hover {
+    color:rgb(130,210,210);
+    border-style:solid;
+    border-width: 0px 0px 2px 0px;
+    border-color: rgb(130,210,210);
+
 }
 
 .base {
+    margin-top: 1vh;
     height: 300px;
     width: 100%;
     background-color: aliceblue;
@@ -85,45 +118,6 @@ body {
     left: -1600px;
 }
 
-nav {
-    padding-top: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.6rem;
-}
-
-#mainn{
-    text-decoration: none;
-    color: rgb(255, 102, 0);
-}
-
-.brand {
-    
-    margin-left: 10rem;
-    font-size: 3rem;
-    font-weight: bold;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    margin-right: 10rem;
-}
-
-nav ul li {
-    padding: 1.5rem;
-    position: relative;
-    letter-spacing: 2px;
-    color: gray;
-}
-
-ul li:hover {
-    border-style: solid;
-    border-width: 0px 0px 2px 0px;
-    border-color: rgb(130, 210, 210);
-    color: rgb(130, 210, 210);
-}
 
 .slider-img:hover{
     opacity: 0.8;
